--- a/index.html
+++ b/index.html
@@ -1,39 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>My Small Website</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <h1>Welcome to My Website</h1>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Levon ♥ Milena - A Celebration of Love</title>
+    <meta name="description" content="A romantic celebration of Levon and Milena's love story - birthday wishes, memories, and endless devotion" />
+    <meta name="author" content="Lovable" />
 
-  <section id="home">
-    <h2>Home</h2>
-    <p>This is a simple website hosted for free on GitHub Pages.</p>
-  </section>
+    <meta property="og:title" content="8f19d468-798e-4312-b038-a87ab6f6895a" />
+    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <section id="about">
-    <h2>About</h2>
-    <p>I created this small site to learn GitHub Pages. It has HTML, CSS, and JavaScript.</p>
-  </section>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  </head>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>You can contact me at <a href="mailto:your@email.com">your@email.com</a></p>
-  </section>
-
-  <footer>
-    <p>© 2025 My Website. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
